Beta-3
==============================================
- Added Implemented Video Clips - Set markers for videos to display only a section of a video you want to share.
- Added Streamer Biographies
- Added Server MOTD on main page
- Added Markdown Support for all Text Area type fields
- Added Mail Settings Testing on First Run and Admin Settings Pages
- Added the Option to Set a Default Stream Name instead of Timestamp
- Added the Ability to set a Custom Invite Code
- Added RTMP Stats endpoint in the nginx.conf file and Display the information in the Admin Dashboard
- Added Open Graph Metadata to the Video, Stream, and Clip pages
- Added the Option for Channel Owners to Disable the Chat Joining/Leaving Notification
- Added Global Webhooks
- Added Theme Override Options for Theme Developers who want to just create a custom CSS file without needing to maintain a full theme file set
- Added Checks for the Server Address IP/DNS Settings in the Admin Menu
- Added Thumbnail location for Streams to APIv1
- Added Support for OSP Site-wide Search
- Added Favicons
- Added Email Channel Subscriptions.  Be notified when a Stream is Live or a new Video is posted.
- Added On Hover Animation for Link images for most pages in Defaultv2
- Added a new configuration variable in the Admin Settings to specify if the site is being served by http or https
- Added Server Admin logs for Events and framework for adding additional log entries in the future
- Fixed Method for determining current viewers of a Live Stream, making the value more accurate
- Upgraded FFMPEG to 4.2 as default for OSP Installs
- Reworked the Nginx.conf file to split off the OSP specific into their own included osp-*.conf files to reduce the need of reworking the single file
- Added HTTP2 Support to the default install of OSP.  Upgrading Users should run the Manual Install Procedures to Upgrade their Nginx systems to the most recent build to add support