@@ -1,11 +1,71 @@
 [supervisord]
 nodaemon=true
 
-[program:gunicorn]
+[program:ospworker5000]
 directory=/opt/osp
 user=www-data
 group=www-data
 command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5000 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5001]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5001 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5002]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5002 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5003]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5003 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5004]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5004 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5005]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5005 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5006]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5006 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5007]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5007 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5008]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5008 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5009]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5009 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
+
+[program:ospworker5010]
+directory=/opt/osp
+user=www-data
+group=www-data
+command=/usr/bin/gunicorn app:app -k gevent -w 1 --bind 0.0.0.0:5010 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
 
 [program:nginx]
 command=/usr/local/nginx/sbin/nginx -g "daemon off;"
