@@ -1,12 +1,0 @@
-[Unit]
-Description=Gunicorn instance to serve myproject
-After=network.target
-
-[Service]
-User=www-data
-Group=www-data
-WorkingDirectory=/opt/osp
-ExecStart=/usr/bin/gunicorn3 app:app -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker -w 1 --bind 0.0.0.0:5000 --reload --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log
-
-[Install]
-WantedBy=multi-user.target
