@@ -12,8 +12,26 @@ http {
     default_type  application/octet-stream;
 
     sendfile        on;
+    gzip            off;
 
     keepalive_timeout  65;
+
+    # Load Balancing for Gunicorn
+    upstream socket_nodes {
+        least_conn;
+        hash $remote_addr;
+        server 127.0.0.1:5000;
+        server 127.0.0.1:5001;
+        server 127.0.0.1:5002;
+        server 127.0.0.1:5003;
+        server 127.0.0.1:5004;
+        server 127.0.0.1:5005;
+        server 127.0.0.1:5006;
+        server 127.0.0.1:5007;
+        server 127.0.0.1:5008;
+        server 127.0.0.1:5009;
+    }
+
 
     server {
         listen   9000;
@@ -39,7 +57,7 @@ http {
         client_max_body_size 16M;
 
         location / {
-            proxy_pass http://127.0.0.1:5000;
+            proxy_pass http://socket_nodes;
             proxy_redirect     off;
 
             proxy_set_header   Host                 $host:$server_port;
