@@ -11,8 +11,8 @@ rtmp {
                         #deny publish all;
                         allow play 127.0.0.1;
 
-                        on_publish http://127.0.0.1:5000/auth-key;
-                        on_publish_done http://127.0.0.1:5000/deauth-user;
+                        on_publish http://127.0.0.1:5010/auth-key;
+                        on_publish_done http://127.0.0.1:5010/deauth-user;
 
                 }
                 application stream-data {
@@ -22,7 +22,7 @@ rtmp {
                         #deny publish all;
                         allow play 127.0.0.1;
 
-                        on_publish http://127.0.0.1:5000/auth-user;
+                        on_publish http://127.0.0.1:5010/auth-user;
                         push rtmp://127.0.0.1:1935/live/;
 
                         hls on;
@@ -50,7 +50,7 @@ rtmp {
                         #deny publish all;
                         allow play 127.0.0.1;
 
-                        on_publish http://127.0.0.1:5000/auth-user;
+                        on_publish http://127.0.0.1:5010/auth-user;
                         push rtmp://127.0.0.1:1935/live/;
 
                         hls on;
@@ -71,7 +71,7 @@ rtmp {
                             record_suffix _%Y%m%d_%H%M%S.flv;
                             exec_record_done bash -c "ffmpeg -y -i $path -codec copy -movflags +faststart /var/www/videos/$name/$basename.mp4 && rm $path";
                             exec_record_done mv /var/www/stream-thumb/$name.png /var/www/videos/$name/$basename.png;
-                            on_record_done http://127.0.0.1:5000/recComplete;
+                            on_record_done http://127.0.0.1:5010/recComplete;
                         }
 
                         recorder thumbnail {
@@ -92,7 +92,7 @@ rtmp {
                         #deny publish all;
                         allow play 127.0.0.1;
 
-                        on_publish http://127.0.0.1:5000/auth-user;
+                        on_publish http://127.0.0.1:5010/auth-user;
                         push rtmp://127.0.0.1:1935/live/;
 
                         exec ffmpeg -i rtmp://127.0.0.1:1935/live/$name
@@ -119,7 +119,7 @@ rtmp {
                         #deny publish all;
                         allow play 127.0.0.1;
 
-                        on_publish http://127.0.0.1:5000/auth-user;
+                        on_publish http://127.0.0.1:5010/auth-user;
                         push rtmp://127.0.0.1:1935/live/;
 
                         exec_push mkdir -m 764 /var/www/videos/$name;
@@ -138,7 +138,7 @@ rtmp {
                             record_suffix _%Y%m%d_%H%M%S.flv;
                             exec_record_done bash -c "ffmpeg -y -i $path -codec copy -movflags +faststart /var/www/videos/$name/$basename.mp4 && rm $path";
                             exec_record_done mv /var/www/stream-thumb/$name.png /var/www/videos/$name/$basename.png;
-                            on_record_done http://127.0.0.1:5000/recComplete;
+                            on_record_done http://127.0.0.1:5010/recComplete;
                         }
 
                         recorder thumbnail {
@@ -182,7 +182,7 @@ rtmp {
                         allow publish 127.0.0.1;
                         allow play all;
 
-                        on_play http://127.0.0.1:5000/playbackAuth;
+                        on_play http://127.0.0.1:5010/playbackAuth;
                 }
 
 
