@@ -16,7 +16,7 @@
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection "upgrade";
 
-                proxy_pass http://127.0.0.1:5000/socket.io;
+                proxy_pass http://socket_nodes/socket.io;
 
         }
 
