@@ -39,3 +39,4 @@ requests==2.18.4
 flask-markdown==0.3
 xmltodict==0.12.0
 apscheduler==3.6.1
+redis==3.3.11
